--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "headlines",
   "version": "0.0.1",
   "private": true,
+  "license": "(MIT OR Apache-2.0)",
   "scripts": {
     "android": "react-native run-android",
     "ios": "react-native run-ios",
@@ -10,14 +11,21 @@
     "lint": "eslint ."
   },
   "dependencies": {
+    "immer": "^8.0.1",
     "react": "16.13.1",
-    "react-native": "0.63.4"
+    "react-native": "0.63.4",
+    "react-native-xml2js": "^1.0.3",
+    "react-redux": "^7.2.2",
+    "redux": "^4.0.5",
+    "redux-devtools": "^3.7.0",
+    "redux-saga": "^1.1.3"
   },
   "devDependencies": {
     "@babel/core": "^7.13.8",
     "@babel/runtime": "^7.13.8",
     "@react-native-community/eslint-config": "^2.0.0",
     "babel-jest": "^26.6.3",
+    "babel-plugin-module-resolver": "^4.1.0",
     "eslint": "^7.20.0",
     "jest": "^26.6.3",
     "metro-react-native-babel-preset": "^0.65.1",
