--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "lint": "eslint ."
   },
   "dependencies": {
+    "@react-native-async-storage/async-storage": "^1.14.1",
     "immer": "^8.0.1",
     "react": "16.13.1",
     "react-native": "0.63.4",
